--- a/styles.css
+++ b/styles.css
@@ -1069,6 +1069,7 @@ body {
   .footer-mobile-text {
     color: #eb6a5e;
     font-size: 16px;
+    width: 100%;
     font-family: Inter, Arial, sans-serif;
     font-weight: 600;
     text-align: center;
