--- a/styles.css
+++ b/styles.css
@@ -1249,6 +1249,8 @@ body {
 
     .cta-text {
       font-size: 15px; /* Adjust button text size */
+      padding-left: 10px; /* Add padding */
+      padding-right: 10px; /* Add padding */
     }
   }
 }
